[gd_scene load_steps=46 format=3 uid="uid://bnluf0hdvqf3e"]

[ext_resource type="Script" uid="uid://bh6r57qph2vnr" path="res://scripts/Tutorial/mainTutorial.gd" id="1_ej4tf"]
[ext_resource type="Texture2D" uid="uid://en21l55q56c" path="res://assets/images2/tutorialBg.png" id="2_ej4tf"]
[ext_resource type="PackedScene" uid="uid://cmsiy2mwp0vgn" path="res://scenes/CardSlotTutorial.tscn" id="3_tbcdj"]
[ext_resource type="Script" uid="uid://dppnn7bhj616n" path="res://scripts/Tutorial/cardSlotTutorial.gd" id="4_ej4tf"]
[ext_resource type="Script" uid="uid://dw0rte7f1rtm6" path="res://scripts/Tutorial/cardManagerTutorial.gd" id="5_0hilk"]
[ext_resource type="Script" uid="uid://c44egv1jlxjyg" path="res://scripts/eraOne/playerHand.gd" id="6_cmspm"]
[ext_resource type="Script" uid="uid://bip7hv0c652mm" path="res://scripts/Tutorial/deckTutorial.gd" id="7_0hilk"]
[ext_resource type="Texture2D" uid="uid://cwnqri6l7wwiy" path="res://assets/images2/_8EF5FA7C-6356-4BDA-AB74-23D32B1816DD_-removebg-preview.png" id="8_dwom6"]
[ext_resource type="Texture2D" uid="uid://1f6b24pjwa4d" path="res://assets/images2/Under.png" id="10_15kfc"]
[ext_resource type="Script" uid="uid://cs5g3frthhelx" path="res://scripts/Tutorial/input_managerTutorial.gd" id="11_0hilk"]
[ext_resource type="Texture2D" uid="uid://d4i2dkqek2qv3" path="res://assets/images2/Progress.png" id="11_7a100"]
[ext_resource type="Script" uid="uid://bgyhse4hp6qvj" path="res://scripts/texture_progress_bar.gd" id="12_feaue"]
[ext_resource type="Texture2D" uid="uid://b6ta14d54arhe" path="res://assets/images2/TutorialLady.png" id="14_0hilk"]
[ext_resource type="Texture2D" uid="uid://c5mecb0lsb5j6" path="res://assets/images2/TutorialArrow.png" id="15_wr8iv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wr8iv"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0hilk"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_offset = Vector2(0, 3.67)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e13mp"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_offset = Vector2(0, 3.67)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vrdqu"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_offset = Vector2(0, 3.67)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cmspm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o6xl0"]
size = Vector2(330, 455)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eb6dy"]
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_size = 5
shadow_offset = Vector2(0, 3.67)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_trceg"]
bg_color = Color(0.43605796, 8.663535e-07, 1.6845763e-07, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_size = 5
shadow_offset = Vector2(0, 3.67)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a8y0u"]
bg_color = Color(0.69919544, 2.0816549e-06, 6.738305e-07, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_size = 5
shadow_offset = Vector2(0, 3.67)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jkv2x"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.3)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jkv2x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jbj1t"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_size = 5
shadow_offset = Vector2(0, 3.67)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_muem4"]
bg_color = Color(0.3032328, 0.30323285, 0.30323276, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_size = 5
shadow_offset = Vector2(0, 3.67)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dp3eg"]
bg_color = Color(0.45452422, 0.45452428, 0.45452416, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_size = 5
shadow_offset = Vector2(0, 3.67)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ld40"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gqmmt"]
bg_color = Color(0.24454394, 0.1366652, 0.02952511, 0.6745098)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.10574625, 0.050342955, 0.005513889, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_offset = Vector2(0, 3.67)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yc10j"]
bg_color = Color(0.18431373, 0.09803922, 0.015686275, 0.83137256)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.105882354, 0.050980393, 0.003921569, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_offset = Vector2(0, 3.67)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jscy8"]
bg_color = Color(0.25882354, 0.14509805, 0.03137255, 0.8)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.105882354, 0.050980393, 0.003921569, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_offset = Vector2(0, 3.67)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_bl2xa"]
color = Color(0, 0, 0, 0)
thickness = 0

[sub_resource type="Animation" id="Animation_0hilk"]
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpeechBox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-780, 180), Vector2(0, 180)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpeechBox/RichTextLabel:visible_characters")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}

[sub_resource type="Animation" id="Animation_ej4tf"]
resource_name = "tutorial_1"
length = 2.0

[sub_resource type="Animation" id="Animation_wr8iv"]
resource_name = "tutorial1"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpeechBox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-780, 180), Vector2(0, 180)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpeechBox/RichTextLabel:visible_characters")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-1, 1, 70]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wr8iv"]
_data = {
&"RESET": SubResource("Animation_0hilk"),
&"tutorial1": SubResource("Animation_wr8iv"),
&"tutorial_1": SubResource("Animation_ej4tf")
}

[sub_resource type="Animation" id="Animation_e13mp"]
resource_name = "tutorial2"
length = 5.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpeechBox/RichTextLabel2:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1, 61]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpeechBox/TutorialArrow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(450, 230), Vector2(350, 430)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpeechBox/TutorialArrow:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.3089969]
}

[sub_resource type="Animation" id="Animation_vrdqu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpeechBox/RichTextLabel2:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpeechBox/TutorialArrow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(545, 440)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpeechBox/TutorialArrow:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vrdqu"]
_data = {
&"RESET": SubResource("Animation_vrdqu"),
&"tutorial2": SubResource("Animation_e13mp")
}

[sub_resource type="Animation" id="Animation_cmspm"]
resource_name = "tutorial3"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpeechBox/RichTextLabel3:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1, 64]
}

[sub_resource type="Animation" id="Animation_ikfo1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpeechBox/RichTextLabel3:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dwom6"]
_data = {
&"RESET": SubResource("Animation_ikfo1"),
&"tutorial3": SubResource("Animation_cmspm")
}

[sub_resource type="Animation" id="Animation_dwom6"]
resource_name = "tutorial4"
length = 6.0

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bl2xa"]
_data = {
&"tutorial4": SubResource("Animation_dwom6")
}

[node name="Tutorial" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ej4tf")

[node name="SpeechBox" type="Panel" parent="."]
z_index = -1
layout_mode = 0
offset_left = -780.0
offset_top = 180.0
offset_right = 13.0
offset_bottom = 529.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wr8iv")

[node name="TutorialLady" type="Sprite2D" parent="SpeechBox"]
position = Vector2(700, 220)
texture = ExtResource("14_0hilk")

[node name="???" type="RichTextLabel" parent="SpeechBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.5718749
anchor_top = 0.17222224
anchor_right = -2.5126512
anchor_bottom = 0.17222224
offset_left = 993.4968
offset_top = 232.89444
offset_right = 2604.5325
offset_bottom = 338.89444
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 40
text = "???
"
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="SpeechBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.133
anchor_top = 0.286
anchor_right = 0.133
anchor_bottom = 0.286
offset_left = -84.469
offset_top = -79.814
offset_right = 384.531
offset_bottom = 138.186
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 40
text = "Hello fellow traveler! To start the tutorial, click the \"next\" button."
metadata/_edit_use_anchors_ = true

[node name="nextButton" type="Button" parent="SpeechBox"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -169.5
offset_top = -57.0
offset_right = 65.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_0hilk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e13mp")
theme_override_styles/hover = SubResource("StyleBoxFlat_vrdqu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cmspm")
text = "— Next —"

[node name="RichTextLabel2" type="RichTextLabel" parent="SpeechBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.133
anchor_top = 0.286
anchor_right = 0.133
anchor_bottom = 0.286
offset_left = -84.469
offset_top = -79.814
offset_right = 384.531
offset_bottom = 138.186
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 40
text = "Good! First, you will have to take the cards out of the deck."
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel3" type="RichTextLabel" parent="SpeechBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.133
anchor_top = 0.286
anchor_right = 0.133
anchor_bottom = 0.286
offset_left = -84.469
offset_top = -79.814
offset_right = 384.531
offset_bottom = 138.186
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 40
text = "Great job! Now slowly drag the card to the enemy."
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel4" type="RichTextLabel" parent="SpeechBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.133
anchor_top = 0.286
anchor_right = 0.133
anchor_bottom = 0.286
offset_left = -84.469
offset_top = -79.814
offset_right = 384.531
offset_bottom = 138.186
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 40
text = "Congrats! You damaged the enemy, now click the \"end turn\" button."
metadata/_edit_use_anchors_ = true

[node name="TutorialArrow" type="Sprite2D" parent="SpeechBox"]
z_index = -1
position = Vector2(545, 440)
scale = Vector2(1.4768856, 1.530027)
texture = ExtResource("15_wr8iv")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -3
layout_mode = 0
offset_left = -463.0
offset_top = -11.0
offset_right = 2264.5
offset_bottom = 1080.0
mouse_filter = 2
texture = ExtResource("2_ej4tf")
expand_mode = 3

[node name="cardSlotTutorial" parent="." instance=ExtResource("3_tbcdj")]
position = Vector2(-3, 57)
script = ExtResource("4_ej4tf")

[node name="cardManager" type="Node2D" parent="."]
script = ExtResource("5_0hilk")

[node name="Hand" type="Node2D" parent="."]
script = ExtResource("6_cmspm")

[node name="DeckTutorial" type="Node2D" parent="."]
z_index = -2
position = Vector2(150, 890)
scale = Vector2(0.65, 0.65)
script = ExtResource("7_0hilk")

[node name="Sprite2D" type="Sprite2D" parent="DeckTutorial"]
texture = ExtResource("8_dwom6")

[node name="Area2D" type="Area2D" parent="DeckTutorial"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeckTutorial/Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_o6xl0")

[node name="inputManager" type="Node2D" parent="."]
script = ExtResource("11_0hilk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.075
anchor_right = 0.5
anchor_bottom = 0.075
offset_left = -480.0
offset_top = -50.0
offset_right = 505.0
offset_bottom = 51.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 120.0
step = 0.01
value = 60.0
texture_under = ExtResource("10_15kfc")
texture_progress = ExtResource("11_7a100")
script = ExtResource("12_feaue")
total_time = 60.0

[node name="Countdown" type="Node" parent="."]

[node name="countdownLabel" type="Label" parent="Countdown"]
modulate = Color(0.17492661, 0.14104345, 0.030845482, 1)
offset_right = 40.0
offset_bottom = 23.0

[node name="Timer" type="Timer" parent="Countdown"]
wait_time = 60.5

[node name="Options" type="Panel" parent="."]
z_index = 5
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -404.0
offset_top = -220.25
offset_right = 404.0
offset_bottom = 220.25
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(404, 220.25)

[node name="Label" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 98.25
grow_horizontal = 2
theme_override_font_sizes/font_size = 51
text = "Pause
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="Options"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 318.0
offset_top = -427.25
offset_right = 389.0
offset_bottom = -358.25
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_eb6dy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_trceg")
theme_override_styles/hover = SubResource("StyleBoxFlat_a8y0u")
theme_override_styles/disabled = SubResource("StyleBoxFlat_jkv2x")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jkv2x")
text = "X
"

[node name="MainMenu" type="Button" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -169.0
offset_top = -34.5
offset_right = 169.0
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_jbj1t")
theme_override_styles/pressed = SubResource("StyleBoxFlat_muem4")
theme_override_styles/hover = SubResource("StyleBoxFlat_dp3eg")
theme_override_styles/disabled = SubResource("StyleBoxFlat_0ld40")
text = "Main Menu"

[node name="AmbientSong" type="AudioStreamPlayer" parent="."]
volume_db = -6.7
autoplay = true
bus = &"Music"

[node name="endTurn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -916.0
offset_top = 121.0
offset_right = -704.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_gqmmt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yc10j")
theme_override_styles/hover = SubResource("StyleBoxFlat_jscy8")
theme_override_styles/disabled = SubResource("StyleBoxFlat_0ld40")
theme_override_styles/focus = SubResource("StyleBoxLine_bl2xa")
text = "End Turn"

[node name="Tutorial1" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wr8iv")
}

[node name="Tutorial2" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vrdqu")
}

[node name="Tutorial3" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dwom6")
}

[node name="Tutorial4" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bl2xa")
}

[connection signal="pressed" from="SpeechBox/nextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="Options/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Options/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="endTurn" to="cardSlotTutorial" method="_on_end_turn_pressed"]
